<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bellkung.anidesu.controller.CommentPostsActivity"
    tools:showIn="@layout/activity_comment_posts">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fillViewport="true"
        android:paddingBottom="70dp"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/c_post_profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/face"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/c_posts_display_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:text="@string/text_display_name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/c_posts_date_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/text_date_time" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/c_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:gravity="top|left"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/comment_list_recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/comment_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c_status_text" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:background="@color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/c_comment_profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/face"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/comment_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/comment_layout_bg"
            android:ems="10"
            android:gravity="top|left"
            android:hint="Write a reply..."
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="1"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/commentaryBtn"
            app:layout_constraintStart_toEndOf="@+id/c_comment_profile_image" />

        <ImageButton
            android:id="@+id/commentaryBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:background="#00000000"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_comment_hover" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
