...
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posts_profile_image" />

        <ImageButton
            android:id="@+id/commentBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:scaleType="centerCrop"
...
