...
            android:paddingLeft="20dp"
            android:text="@string/text_display_name"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/post_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="top|left"
        android:hint="What's on your mind?"
        android:inputType="textMultiLine"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/postBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorDarkKnight"
        android:textColor="@color/link_water"
        android:text="@string/post_btn"
        app:layout_constraintBottom_toBottomOf="parent"
...
