<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkKnight"
    tools:context="com.bellkung.anidesu.controller.MainActivity">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
...
