...

    <!--Text Display -->
    <string name="text_display_name">B'Bell Kung Desu</string>
    <string name="text_date_time">28 Nov 2017 - 14:54</string>

    <!--Button -->
    <string name="post_btn">Post</string>

</resources>

